# fluvio-s3-sink

./: .gitignore  Cargo.toml  Connector.toml  README.md  config-example.yaml
src/: config.rs  main.rs  sink.rs
