[package]
name = "s3-sink"
version = "0.1.0"
authors = ["Alexander Mikhalev <alex@metacortex.engineer>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["tokio1","attributes"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.8"}
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.8", features = ["derive"]}
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
serde_json = { version = "1", default-features = false }
url = { version = "2.3", default-features = false, features = ["serde"] }
itertools = { version = "0.10", default-features = false }    
# opendal = {version="0.33.2", features=["services-s3"],default-features = false}
opendal = {version="0.33.2"}
